# zeroshot-xgboost

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: ames.tab  carcinogens_lagunin.tab  clintox.tab  cyp1a2_veith.tab  cyp2c19_veith.tab  cyp2c9_substrate_carbonmangels.tab  cyp2c9_veith.tab  cyp2d6_substrate_carbonmangels.tab  cyp2d6_veith.tab  cyp3a4_substrate_carbonmangels.tab  cyp3a4_veith.tab  herg.tab  hia_hou.tab  pgp_broccatelli.tab  skin_reaction.tab
notebooks/: bbb_classifier.ipynb  benchmark_binary_classification.ipynb  large_dataset_benchmark.ipynb  portfolio_selection_demo.ipynb
src/zsxgboost/: __init__.py  flaml_data.py  inspector.py  main.py  model.py  params.py  presets.py
src/zsxgboost/utils/: logging.py
tests/: test_zsxgboost.py
