[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zsxgboost"
version = "0.1.0"
description = "Reasonable zero-shot XGBoost configurations for high dimensional data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Miquel Duran-Frigola", email="miquel@ersilia.io"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "xgboost>=2.0",
  "scikit-learn>=1.0",
  "loguru>=0.6",
  "rich>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]
onnx = [
  "onnx>=1.14",
  "onnxmltools>=1.12",
  "onnxruntime>=1.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

